// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button headerFooter demo works fine 1`] = `
<div>
  <div
    class="t-list t-size-m t-list--split"
  >
    
    
    <div
      class="t-list__header"
    >
      这里是 Header
    </div>
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表标题
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容的描述性文字
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表标题
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容的描述性文字
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表标题
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容的描述性文字
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      
    </ul>
    <div
      class="t-list__footer"
    >
      这里是 Footer
    </div>
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
  <div
    style="margin-bottom: 16px;"
  />
  <div
    class="t-list t-size-m t-list--split"
  >
    
    
    <div
      class="t-list__header"
    >
      
       通过 Slot 插入的 Header 
      
    </div>
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表标题
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容的描述性文字
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表标题
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容的描述性文字
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表标题
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容的描述性文字
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      
    </ul>
    <div
      class="t-list__footer"
    >
      
       通过 Slot 插入的 Footer 
      
    </div>
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Button imageText demo works fine 1`] = `
<div>
  <div
    class="t-list t-size-m t-list--split"
  >
    
    
    <!---->
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表标题
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容的描述性文字
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表标题
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容的描述性文字
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表标题
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容的描述性文字
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      
    </ul>
    <!---->
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
  <div
    style="margin-bottom: 16px;"
  />
  <div
    class="t-list t-size-m t-list--split"
  >
    
    
    <!---->
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表标题
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                
                <p>
                  列表内容的描述性文字
                </p>
                
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      
    </ul>
    <!---->
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Button multiline demo works fine 1`] = `
<div>
  <div
    class="t-list t-size-m t-list--split"
  >
    
    
    <!---->
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <!---->
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <!---->
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <!---->
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      
    </ul>
    <!---->
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Button operation demo works fine 1`] = `
<div>
  <div
    class="t-list t-size-m t-list--split"
  >
    
    
    <!---->
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <li
            class="t-list-item__action"
          >
            
            <span>
              <button
                class="t-button t-size-m t-button--variant-text t-button--theme-default"
                type="button"
              >
                <span
                  class="t-button__text"
                >
                  
                  操作1
                  
                </span>
              </button>
              <button
                class="t-button t-size-m t-button--variant-text t-button--theme-default"
                type="button"
              >
                <span
                  class="t-button__text"
                >
                  
                  操作2
                  
                </span>
              </button>
              <button
                class="t-button t-size-m t-button--variant-text t-button--theme-default"
                type="button"
              >
                <span
                  class="t-button__text"
                >
                  
                  操作3
                  
                </span>
              </button>
            </span>
            
          </li>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <li
            class="t-list-item__action"
          >
            
            <span>
              <button
                class="t-button t-size-m t-button--variant-text t-button--theme-default"
                type="button"
              >
                <span
                  class="t-button__text"
                >
                  
                  操作1
                  
                </span>
              </button>
              <button
                class="t-button t-size-m t-button--variant-text t-button--theme-default"
                type="button"
              >
                <span
                  class="t-button__text"
                >
                  
                  操作2
                  
                </span>
              </button>
              <button
                class="t-button t-size-m t-button--variant-text t-button--theme-default"
                type="button"
              >
                <span
                  class="t-button__text"
                >
                  
                  操作3
                  
                </span>
              </button>
            </span>
            
          </li>
        </div>
      </li>
      
    </ul>
    <!---->
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
  <div
    style="margin-bottom: 16px;"
  />
  <div
    class="t-list t-size-m t-list--split"
  >
    
    
    <!---->
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <li
            class="t-list-item__action"
          >
            
            <button
              class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                <svg
                  class="t-icon t-icon-edit"
                  version="1.1"
                  viewBox="0 0 1024 1024"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M447.8469152 783.0581632C437.60592704 793.2991488 424.19421696 799.7638272 409.8035072 801.395744L256.6740096 818.760736C221.55288832 822.7435008 189.85292864 797.5008704 185.87016768 762.3797504 185.32672256 757.587488 185.32672256 752.7491584 185.87016768 747.956896L203.23516352 594.82739968C204.86708032 580.43668992 211.33175744 567.0249792 221.5727456 556.78399104L522.53948096 255.81725568 613.0491488 165.30758784C638.04270336 140.31403328 676.171072 137.9198432 698.2112448 159.96001472L844.6708928 306.41966272C866.7110656 328.45983488 864.3168704 366.58820352 839.3233216 391.58175808L447.8469152 783.0581632ZM522.48658368 346.28481664L266.82757952 602.0388256 249.46258368 755.16832 402.59208128 737.803328 658.2945856 482.09281664 522.48658368 346.28481664ZM658.3335872 211.32421888L568.18258368 301.42081664 714.6145856 447.85281664 804.7932352 357.78386688 658.3335872 211.32421888Z"
                    fill-opacity=".9"
                    fill-rule="evenodd"
                  />
                </svg>
                
              </span>
            </button>
            <button
              class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                <svg
                  class="t-icon t-icon-download"
                  version="1.1"
                  viewBox="0 0 1024 1024"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M896 896L192 896 192 704 256 704 255.937328 831.9609152 831.9373312 831.9609152 832 704 896 704 896 896ZM576 75.4169184L575.937328 659.968 853.184352 381.09423936 897.6297088 425.53959744 565.92213248 758.7649856 563.20206976 761.182432 560.27266048 763.2049344 559.58821952 763.6247552C550.50648384 769.5321728 538.68397632 769.4512128 529.68399616 763.419968L525.4449728 759.908672 524.72661888 759.2139008 524.54518144 759.0378112 524.36488768 758.8598464 523.24472192 757.681312 191.873328 421.73694912 234.68549824 378.92477952 511.937328 662.144 512 75.4169184 576 75.4169184Z"
                    fill-rule="evenodd"
                  />
                </svg>
                
              </span>
            </button>
            
          </li>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <li
            class="t-list-item__action"
          >
            
            <button
              class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                <svg
                  class="t-icon t-icon-edit"
                  version="1.1"
                  viewBox="0 0 1024 1024"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M447.8469152 783.0581632C437.60592704 793.2991488 424.19421696 799.7638272 409.8035072 801.395744L256.6740096 818.760736C221.55288832 822.7435008 189.85292864 797.5008704 185.87016768 762.3797504 185.32672256 757.587488 185.32672256 752.7491584 185.87016768 747.956896L203.23516352 594.82739968C204.86708032 580.43668992 211.33175744 567.0249792 221.5727456 556.78399104L522.53948096 255.81725568 613.0491488 165.30758784C638.04270336 140.31403328 676.171072 137.9198432 698.2112448 159.96001472L844.6708928 306.41966272C866.7110656 328.45983488 864.3168704 366.58820352 839.3233216 391.58175808L447.8469152 783.0581632ZM522.48658368 346.28481664L266.82757952 602.0388256 249.46258368 755.16832 402.59208128 737.803328 658.2945856 482.09281664 522.48658368 346.28481664ZM658.3335872 211.32421888L568.18258368 301.42081664 714.6145856 447.85281664 804.7932352 357.78386688 658.3335872 211.32421888Z"
                    fill-opacity=".9"
                    fill-rule="evenodd"
                  />
                </svg>
                
              </span>
            </button>
            <button
              class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                <svg
                  class="t-icon t-icon-download"
                  version="1.1"
                  viewBox="0 0 1024 1024"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M896 896L192 896 192 704 256 704 255.937328 831.9609152 831.9373312 831.9609152 832 704 896 704 896 896ZM576 75.4169184L575.937328 659.968 853.184352 381.09423936 897.6297088 425.53959744 565.92213248 758.7649856 563.20206976 761.182432 560.27266048 763.2049344 559.58821952 763.6247552C550.50648384 769.5321728 538.68397632 769.4512128 529.68399616 763.419968L525.4449728 759.908672 524.72661888 759.2139008 524.54518144 759.0378112 524.36488768 758.8598464 523.24472192 757.681312 191.873328 421.73694912 234.68549824 378.92477952 511.937328 662.144 512 75.4169184 576 75.4169184Z"
                    fill-rule="evenodd"
                  />
                </svg>
                
              </span>
            </button>
            
          </li>
        </div>
      </li>
      
    </ul>
    <!---->
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Button scroll demo works fine 1`] = `
<div
  class="t-list t-size-m"
  style="max-height: 200px;"
>
  
  
  <!---->
  <ul
    class="t-list-items"
  >
    
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    
  </ul>
  <!---->
  
  <div
    class="t-list__load"
  >
    <!---->
  </div>
  
</div>
`;

exports[`Button size demo works fine 1`] = `
<div>
  <div
    class="t-list t-size-s t-list--split"
  >
    
    
    <!---->
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          列表内容的描述性文字
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          列表内容的描述性文字
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          列表内容的描述性文字
          
          <!---->
        </div>
      </li>
      
    </ul>
    <!---->
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
  <div
    style="margin-bottom: 16px;"
  />
  <div
    class="t-list t-size-m t-list--split"
  >
    
    
    <!---->
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          列表内容的描述性文字
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          列表内容的描述性文字
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          列表内容的描述性文字
          
          <!---->
        </div>
      </li>
      
    </ul>
    <!---->
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
  <div
    style="margin-bottom: 16px;"
  />
  <div
    class="t-list t-size-l t-list--split"
  >
    
    
    <!---->
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          列表内容的描述性文字
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          列表内容的描述性文字
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          列表内容的描述性文字
          
          <!---->
        </div>
      </li>
      
    </ul>
    <!---->
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
</div>
`;
